--- a/src/components/navigation/Navigation.astro
+++ b/src/components/navigation/Navigation.astro
@@ -16,8 +16,8 @@
     <div class="flex justify-between items-center h-16">
       {/* Logo */}
       <div class="flex items-center">
-        <a href="/" class="text-xl font-bold text-blue-600 hover:text-blue-700 transition-colors">
-          VibeTravels
+        <a href="/" class="text-xl font-bold bg-gradient-to-r from-purple-600 to-pink-600 text-transparent bg-clip-text hover:from-purple-700 hover:to-pink-700 transition-all">
+          Magic Travel App
         </a>
       </div>
 
