--- a/src/pages/trips/[id]/edit.astro
+++ b/src/pages/trips/[id]/edit.astro
@@ -28,7 +28,7 @@ const breadcrumbItems = [
 ];
 ---
 
-<Layout title="Edit Trip - VibeTravels">
+<Layout title="Edit Trip - Magic Travel App">
   <main class="mx-auto max-w-3xl px-4 py-8 sm:px-6 lg:px-8">
     {/* Breadcrumb */}
     <div class="mb-6">
