--- a/src/pages/trips/[id].astro
+++ b/src/pages/trips/[id].astro
@@ -27,7 +27,7 @@ const breadcrumbItems = [
 ];
 ---
 
-<Layout title="Trip Details - VibeTravels">
+<Layout title="Trip Details - Magic Travel App">
   <main class="mx-auto max-w-4xl px-4 py-8 sm:px-6 lg:px-8">
     {/* Breadcrumb */}
     <div class="mb-6">
