--- a/src/pages/trips/new.astro
+++ b/src/pages/trips/new.astro
@@ -24,7 +24,7 @@ const breadcrumbItems = [
 ];
 ---
 
-<Layout title="Create New Trip - VibeTravels">
+<Layout title="Create New Trip - Magic Travel App">
   <main class="mx-auto max-w-3xl px-4 py-8 sm:px-6 lg:px-8">
     {/* Header */}
     <div class="mb-8">
